[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UnitCard.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UnitCardView.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/PlayerHand.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/TheaterLane.tscn" type="PackedScene" id=6]

[sub_resource type="Theme" id=1]

[sub_resource type="InputEventKey" id=2]
scancode = 78

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.423529, 0.423529, 0.423529, 1 )

[sub_resource type="InputEventKey" id=5]
scancode = 87

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventKey" id=7]
scancode = 85

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="InputEventKey" id=9]
scancode = 68

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
self_modulate = Color( 0.392157, 0.384314, 0.384314, 1 )
rect_min_size = Vector2( 1280, 720 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 822.0
margin_bottom = 713.0
rect_min_size = Vector2( 1280, 720 )
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 79.0
margin_top = 67.0
margin_right = 1201.0
margin_bottom = 653.0
custom_constants/separation = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugSidebar" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_right = 240.0
margin_bottom = 586.0
rect_min_size = Vector2( 240, 60 )
rect_pivot_offset = Vector2( -571.828, -65 )
theme = SubResource( 1 )
custom_constants/separation = 16

[node name="NewGameButton" type="Button" parent="CenterContainer/HBoxContainer/DebugSidebar"]
margin_right = 240.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 60 )
size_flags_vertical = 0
shortcut = SubResource( 3 )
text = "New Game"

[node name="LogLabel" type="RichTextLabel" parent="CenterContainer/HBoxContainer/DebugSidebar"]
margin_top = 76.0
margin_right = 240.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 4 )
text = "Log:
"
scroll_following = true

[node name="VersionLabel" type="Label" parent="CenterContainer/HBoxContainer/DebugSidebar"]
margin_top = 572.0
margin_right = 240.0
margin_bottom = 586.0
text = "AirLandSea v0.0.0"

[node name="Board" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
self_modulate = Color( 0.768627, 0.698039, 0.698039, 1 )
margin_left = 304.0
margin_right = 829.0
margin_bottom = 586.0
rect_min_size = Vector2( 525, 0 )
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpponentHand" parent="CenterContainer/HBoxContainer/Board" instance=ExtResource( 5 )]
margin_bottom = 14.0
rect_min_size = Vector2( 0, 0 )
player_name = "Easy AI"
is_first = false
show_hand = false

[node name="BoardRow" type="HBoxContainer" parent="CenterContainer/HBoxContainer/Board"]
margin_top = 30.0
margin_right = 525.0
margin_bottom = 433.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16
alignment = 1

[node name="TheaterLane1" parent="CenterContainer/HBoxContainer/Board/BoardRow" instance=ExtResource( 6 )]
margin_left = 35.0
margin_right = 144.0
margin_bottom = 403.0

[node name="TheaterLane2" parent="CenterContainer/HBoxContainer/Board/BoardRow" instance=ExtResource( 6 )]
margin_left = 160.0
margin_right = 269.0
margin_bottom = 403.0
theater_type = 2

[node name="TheaterLane3" parent="CenterContainer/HBoxContainer/Board/BoardRow" instance=ExtResource( 6 )]
margin_left = 285.0
margin_right = 394.0
margin_bottom = 403.0
theater_type = 3

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/HBoxContainer/Board/BoardRow"]
margin_left = 410.0
margin_right = 489.0
margin_bottom = 403.0
rect_min_size = Vector2( 79, 0 )

[node name="UnitCard" parent="CenterContainer/HBoxContainer/Board/BoardRow/CenterContainer" instance=ExtResource( 3 )]
margin_top = 147.0
margin_right = 79.0
margin_bottom = 256.0

[node name="PlayerHand" parent="CenterContainer/HBoxContainer/Board" instance=ExtResource( 5 )]
margin_top = 449.0
margin_bottom = 586.0
rect_min_size = Vector2( 0, 0 )

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 893.0
margin_right = 1122.0
margin_bottom = 586.0

[node name="SideBar" type="VBoxContainer" parent="CenterContainer/HBoxContainer/CenterContainer"]
margin_right = 229.0
margin_bottom = 586.0
custom_constants/separation = 16

[node name="WithdrawButton" type="Button" parent="CenterContainer/HBoxContainer/CenterContainer/SideBar"]
margin_right = 229.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 60 )
size_flags_vertical = 0
shortcut = SubResource( 6 )
text = "Withdraw"

[node name="UnitCardView" parent="CenterContainer/HBoxContainer/CenterContainer/SideBar" instance=ExtResource( 4 )]
margin_top = 76.0
margin_right = 229.0
margin_bottom = 395.0

[node name="Spacer2" type="Control" parent="CenterContainer/HBoxContainer/CenterContainer/SideBar"]
margin_top = 411.0
margin_right = 229.0
margin_bottom = 419.0
rect_min_size = Vector2( 0, 8 )

[node name="ActionPrompt" type="Label" parent="CenterContainer/HBoxContainer/CenterContainer/SideBar"]
margin_top = 435.0
margin_right = 229.0
margin_bottom = 466.0
rect_min_size = Vector2( 229, 31 )
text = "Select a card from your hand to play."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer3" type="Control" parent="CenterContainer/HBoxContainer/CenterContainer/SideBar"]
margin_top = 482.0
margin_right = 229.0
margin_bottom = 490.0
rect_min_size = Vector2( 0, 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer/CenterContainer/SideBar"]
margin_top = 506.0
margin_right = 229.0
margin_bottom = 586.0
custom_constants/separation = 16

[node name="PlayFaceupButton" type="Button" parent="CenterContainer/HBoxContainer/CenterContainer/SideBar/HBoxContainer"]
margin_right = 106.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 0
disabled = true
shortcut = SubResource( 8 )
text = "Play Faceup"

[node name="PlayFacedownButton" type="Button" parent="CenterContainer/HBoxContainer/CenterContainer/SideBar/HBoxContainer"]
margin_left = 122.0
margin_right = 229.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 0
disabled = true
shortcut = SubResource( 10 )
text = "Play Facedown"
[connection signal="card_focussed" from="." to="CenterContainer/HBoxContainer/CenterContainer/SideBar/UnitCardView" method="_on_Game_card_focussed"]
[connection signal="card_selected" from="." to="CenterContainer/HBoxContainer/CenterContainer/SideBar/UnitCardView" method="_on_Game_card_selected"]
[connection signal="gui_input" from="CenterContainer" to="." method="_on_CenterContainer_gui_input"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/DebugSidebar/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/CenterContainer/SideBar/WithdrawButton" to="." method="_on_WithdrawButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/CenterContainer/SideBar/HBoxContainer/PlayFaceupButton" to="." method="_on_PlayFaceupButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/CenterContainer/SideBar/HBoxContainer/PlayFacedownButton" to="." method="_on_PlayFacedownButton_pressed"]
